# donut_examples

./: .gitmodules  CMakeLists.txt
examples/basic_triangle_tinyrhi/: CMakeLists.txt  basic_triangle_tinyrhi.cpp
examples/basic_triangle_tinyrhi/shaders/: compile.bat  shader.frag  shader.vert  vert.spv
tinyrhi/: CMakeLists.txt
tinyrhi/include/tinyrhi/: vulkan-device.h  vulkan-swapchain.h  vulkan.h
tinyrhi/src/vulkan/: vulkan-device.cpp  vulkan-swapchain.cpp  vulkan.cpp
